# AIM-ML_Projects

./: .gitignore  README.md
MLUtils/: pyproject.toml
MLUtils/src/mlutils/: Utils.py  __init__.py
MarimoProjects/: ASLCNN.py  ASLDataSet.py  ASLDataSetTest.py  ASLPart1.py  BinaryClassification.py  MNIST.py  MultiCalss.py  PyTorchDataLoaders.py  ReadDigits.py  WorkingBinaryClassification.py  aslcnn.py  imports.py  minst_model_full.pth  mnist_model.pth  pyproject.toml
MarimoProjects/Classification/: 01SimpleClassification.py  02BinaryClassification.py  03MultiClassification.py  SimpleClassificationMarimo.py
MarimoProjects/MNIST/: ReadDigitsTraining.py  TheMNISTDataSet.py
markdown/: 01SimpleClassification.md  02BinaryClassification.md  03MultiClassification.md  BinaryClassification.md  ReadDigitsTraining.md  SimpleClassificationMarimo.md  TheMNISTDataSet.md
static_html/: 01SimpleClassification.html  02BinaryClassification.html  03MultiClassification.html  BinaryClassification.html  ReadDigitsTraining.html  SimpleClassificationMarimo.html  TheMNISTDataSet.html
