[project]
name = "marimoprojects"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.17.7",
    "ty>=0.0.1a26",
    "MLUtils",
    "torch>=2.9.0",
    "numpy>=2.3.4",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
    "ruff>=0.14.4",
    "requests>=2.32.5",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[tool.marimo.display]
default_width = "full"

[tool.uv.sources]
MLUtils = {path="../MLUtils", editable = true}
